index add see more

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@ layout: landing
 								<li><a href="#" class="button special">網站建置中，請敬請期待</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">See More</a>
 					</section>
